<resources>
    <string name="app_name">QuizMania</string>
    <string name="welcome_message">Witaj w QuizManii</string>
    <string name="login_button_text">Zaloguj sie</string>
    <string name="register_button_text">Zarejestruj sie</string>
    <string name="login_text_value">ZALOGUJ SIE</string>
    <string name="Email">Email</string>
    <string name="password">Haslo</string>
    <string name="registerTextViewContent">ZAREJESTRUJ SIE</string>
    <string name="username_text">Nazwa uzytkownika</string>
    <string name="emailResource">emial</string>
    <string name="menRadioButtonValue">Mezczyzna</string>
    <string name="womenValueResource">Kobieta</string>
    <string name="pick_date">Data urodzenia</string>
    <string name="rerun">Rerun</string>
    <string name="exit_quiz">Exit</string>
    <string name="win_quiz">Congratulations! You have completed the course with the maximum number of points.</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_quiz_list">QuizListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="register_text_2" />
    <string name="profile_button_text">Profil</string>
    <string name="quiz_button_text">Quiz</string>
    <string name="Ranking_button_text">Ranking</string>
    <string name="Punkty">Punkty</string>
    <string name="QuizDone">Ukończonych quizów:</string>
    <string name="KreatorQuziów">Kreator quizów</string>
    <string name="Menu">MENU</string>
</resources>
