<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context=".MainActivity">

    <Button
        android:id="@+id/login_button"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="#e7595d"
        android:duplicateParentState="false"
        android:text="@string/login_text_value"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="149dp"
        android:layout_height="39dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="#e7595d"
        android:duplicateParentState="false"
        android:text="@string/registerTextViewContent"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <TextView
        android:id="@+id/welcome_text_id"
        android:layout_width="325dp"
        android:layout_height="66dp"
        android:fontFamily="monospace"
        android:text="@string/welcome_message"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

</androidx.constraintlayout.widget.ConstraintLayout>