<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dashboard_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashboard_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <Button
            android:id="@+id/profile_button"
            android:layout_width="191dp"
            android:layout_height="63dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#e7595d"
            android:duplicateParentState="false"
            android:text="@string/profile_button_text"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48"/>

        <Button
            android:id="@+id/quiz_button"
            android:layout_width="191dp"
            android:layout_height="63dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#e7595d"
            android:duplicateParentState="false"
            android:text="@string/quiz_button_text"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.332" />

        <Button
            android:id="@+id/ranking_button"
            android:layout_width="191dp"
            android:layout_height="63dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#e7595d"
            android:duplicateParentState="false"
            android:text="@string/ranking_button_text"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.624" />

        <Button
            android:id="@+id/create_quiz_button"
            android:layout_width="191dp"
            android:layout_height="63dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#e7595d"
            android:duplicateParentState="false"
            android:text="@string/KreatorQuziów"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.767" />

        <TextView
            android:layout_width="93dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Menu"
            android:textColor="@color/colorButtonBackground"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.098" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>